Fix issue menu got cut off when opened in mobile devices landscape mode

--- a/styles.css
+++ b/styles.css
@@ -529,7 +529,7 @@ footer {
                 display: flex;
                 flex-direction: column;
                 justify-items: center;
-                gap: 2.133rem;
+                gap: min(calc(33.33vh - 4.13rem), 2.133rem);
             }
 
                 header > .navigation-menu.opened::before {
